# casablanca-quant

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/casablanca_quant/: __init__.py  alpha.py  audit.py  backtest.py  cli.py  ingest.py  paths.py  portfolio.py  signals.py
tests/: test_alpha.py  test_pipeline.py
