[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casablanca-quant"
version = "0.1.0"
description = "Casablanca Stock Exchange quant lab: ingestion, efficiency audit, factor backtests, portfolio."
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "scipy", "openpyxl", "scikit-learn", "streamlit", "plotly"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
casablanca-quant = "casablanca_quant.cli:main"
